<?xml version="1.0" encoding="UTF-8"?>

<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xmlns="http://maven.apache.org/POM/4.0.0"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <modules>
    <module>runner</module>
    <module>backend</module>
    <module>shared</module>
    <module>aggregator</module>
  </modules>

  <artifactId>velcom</artifactId>
  <groupId>de.aaaaaaah</groupId>
  <name>VelCom</name>
  <version>0.0</version>

  <packaging>pom</packaging>

  <properties>
    <junit.version>5.6.0-RC1</junit.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <slf4j.version>1.7.30</slf4j.version>
  </properties>


  <build>
    <pluginManagement>
      <plugins>

        <!-- COMPILER SETTINGS -->
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <configuration>
            <compilerArgs>
              <arg>-parameters</arg>
            </compilerArgs>
            <release>11</release>
          </configuration>
          <version>3.8.1</version>
        </plugin>

        <!-- RUNNABLE JAR -->
        <plugin>
          <artifactId>maven-shade-plugin</artifactId>
          <configuration>
            <finalName>${project.name}</finalName>
          </configuration>
          <executions>
            <execution>
              <goals>
                <goal>shade</goal>
              </goals>
              <id>shade</id>
              <phase>package</phase>
            </execution>
          </executions>
          <version>3.2.1</version>
        </plugin>

        <!-- UNIT TESTING -->
        <plugin>
          <artifactId>maven-surefire-plugin</artifactId>
          <groupId>org.apache.maven.plugins</groupId>
          <version>3.0.0-M3</version>
        </plugin>

        <!-- CODE COVERAGE-->
        <plugin>
          <groupId>org.jacoco</groupId>
          <artifactId>jacoco-maven-plugin</artifactId>
          <version>0.8.5</version>
          <executions>
            <execution>
              <id>prepare-agent</id>
              <goals>
                <goal>prepare-agent</goal>
              </goals>
            </execution>
            <execution>
              <id>report</id>
              <phase>prepare-package</phase>
              <goals>
                <goal>report</goal>
              </goals>
            </execution>
            <execution>
              <id>post-unit-test</id>
              <phase>test</phase>
              <goals>
                <goal>report</goal>
              </goals>
              <configuration>
                <!-- Sets the path to the file which contains the execution data. -->

                <dataFile>target/jacoco.exec</dataFile>
                <!-- Sets the output directory for the code coverage report. -->
                <outputDirectory>target/jacoco-ut</outputDirectory>
              </configuration>
            </execution>
          </executions>
          <configuration>
            <excludes>
            </excludes>
          </configuration>
        </plugin>

        <!-- Maven site -->
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-site-plugin</artifactId>
          <version>3.8.2</version>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

  <dependencyManagement>
    <dependencies>

      <!-- COMPRESSION -->
      <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-compress -->
      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-compress</artifactId>
        <version>1.19</version>
      </dependency>

      <!-- TESTING -->
      <dependency>
        <artifactId>junit-jupiter-api</artifactId>
        <groupId>org.junit.jupiter</groupId>
        <scope>test</scope>
        <version>${junit.version}</version>
      </dependency>
      <dependency>
        <artifactId>junit-jupiter-engine</artifactId>
        <groupId>org.junit.jupiter</groupId>
        <scope>test</scope>
        <version>${junit.version}</version>
      </dependency>

      <!-- PARAMETERIZED TESTS -->
      <dependency>
        <artifactId>junit-jupiter-params</artifactId>
        <groupId>org.junit.jupiter</groupId>
        <scope>test</scope>
        <version>${junit.version}</version>
      </dependency>

      <dependency>
        <artifactId>jackson-bom</artifactId>
        <groupId>com.fasterxml.jackson</groupId>
        <scope>import</scope>
        <type>pom</type>
        <version>2.10.0</version>
      </dependency>

      <dependency>
        <groupId>org.mockito</groupId>
        <artifactId>mockito-all</artifactId>
        <version>1.10.19</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.assertj</groupId>
        <artifactId>assertj-core</artifactId>
        <version>3.15.0</version>
        <scope>test</scope>
      </dependency>

      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-api</artifactId>
        <version>${slf4j.version}</version>
      </dependency>

      <dependency>
        <groupId>ch.qos.logback</groupId>
        <artifactId>logback-classic</artifactId>
        <version>1.2.3</version>
      </dependency>

    </dependencies>
  </dependencyManagement>

  <reporting>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-project-info-reports-plugin</artifactId>
        <version>3.0.0</version>
        <reportSets>
          <reportSet>
            <reports>
            </reports>
          </reportSet>
        </reportSets>
      </plugin>
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <reportSets>
          <reportSet>
            <reports>
              <!-- select non-aggregate reports -->
              <report>report</report>
            </reports>
          </reportSet>
        </reportSets>
      </plugin>
    </plugins>
  </reporting>
</project>
